stylesheets/application.css
/* 
 * Load the default Redmine stylesheet
 */
@import url("../../../stylesheets/application.css");


/*
 * Special fonts
 */
@font-face {
    font-family: "zeroes_3";
    src: url("../fonts/zeroes_3.ttf") format("truetype");
}
@font-face {
    font-family: "audimat";
    src: url("../fonts/audimat.ttf") format("truetype");
}


/*
 * Theme selection menu CSS
 */
#theme_menu {
    top: 0;
    left: 0;
    position: fixed;
    width: 100%;
    height: 100%;
    display: none;
}
#theme_menu div,
#theme_menu p,
#theme_menu h2,
#theme_menu h3 {
    color: #ccc;
    font-family: audimat;
}
#theme_menu.visible {
    display: block;
}
#theme_menu #theme_menu_bg {
    top: 0;
    left: 0;
    position: absolute;
    width: 100%;
    height: 100%;
    display: block;
    background: rgba(0, 0, 0, 0.6);
    z-index: 10;
}
#theme_menu #theme_menu_aligner {
    margin: 0 auto;
    border-spacing: 0;
    height: 100%;
    z-index: 11;
}
#theme_menu #theme_menu_window {
    padding: 2px;
    background: #888;
    border-radius: 10px;
}
#theme_menu #theme_menu_window_bg {
    overflow: hidden;
    background: #000;
    border-radius: 10px;
}

#theme_menu #theme_menu_title {
    display: block;
    height: 40px;
    position: relative;
}
#theme_menu #theme_menu_title h1 {
    margin: 0;
    padding: 0;
    padding-left: 16px;
    padding-right: 56px;
    line-height: 40px;
    font-style: italic;
    font-size: 22px;
    text-align: center;
    color: #fff;
    display: block;
}
#theme_menu #theme_menu_title #theme_menu_close {
    right: 5px;
    top: 5px;
    position: absolute;
    width: 30px;
    height: 30px;
    text-align: center;
    line-height: 30px;
    font-size: 22px;
    font-weight: bold;
    background: #222;
    color: #ccc;
    cursor: pointer;
    border-radius: 7px;
}
#theme_menu #theme_menu_title #theme_menu_close:hover {
    background: #444;
    color: #fff;
}

#theme_menu #theme_menu_content {
    padding: 8px;
    display: block;
    overflow: hidden;
    background: #222;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}
#theme_menu #theme_menu_content h2 {
    margin: 0;
    padding: 6px 8px;
    color: #fff;
    font-size: 18px;
}
#theme_menu #theme_menu_content h3 {
    margin: 8px 0;
    padding: 6px;
    background: #444;
    color: #ccc;
    font-size: 16px;
    border-radius: 6px;
}
#theme_menu #theme_menu_content .skin {
    cursor: pointer;
}
#theme_menu #theme_menu_content .skin:hover h3 {
    background: #666;
    color: #fff;
}
#theme_menu #theme_menu_content .skin.active {
    cursor: default;
}
#theme_menu #theme_menu_content .skin.active h3 {
    background: #222;
    color: #fff;
    font-style: italic;
}
#theme_menu .menu-section {
    margin: 6px;
    display: block;
    float: left;
    max-width: 380px;
    overflow: hidden;
    background: #444;
    border: 2px solid #444;
    border-radius: 8px;
}
#theme_menu .menu-content {
    padding: 12px;
    background: #000;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
}

#theme_menu #theme_font_size {
    vertical-align: middle;
}


/* 
 * Additional CSS for all themes
 */
body .wiki { margin-left: 80px; }
body .wiki h1 { margin-left: -80px; }
body .wiki h2,
body .wiki h3,
body .wiki h4,
body .wiki h5 { margin-left: -40px; }


/* 
 * Additional CSS for all black themes
 */
body.black-theme #header,
body.black-theme #header a { color: #eee; }
body.black-theme #main-menu li a { color: #eee; border-top-left-radius: 5px; border-top-right-radius: 5px; }
body.black-theme #main-menu li a:hover { background: #444; color: #fff; }
body.black-theme #main-menu li a.selected,
body.black-theme #main-menu li a.selected:hover { color: #fff; }
body.black-theme table.list { border-color: #333; }
body.black-theme table.list th { background-color: #333; color: #eee; }
body.black-theme .odd { background-color: #151515; }
body.black-theme .even { background-color: #000; }
/* wiki */
body.black-theme .wiki { color: #ccc; }
body.black-theme #content .wiki h1,
body.black-theme #content .wiki h2,
body.black-theme #content .wiki h3,
body.black-theme #content .wiki h4,
body.black-theme #content .wiki h5 { color: #fff; }
body.black-theme div.wiki pre { background-color: #222; color: #ddd; border-color: #666; border-radius: 5px; }
body.black-theme a.wiki-anchor:hover { color: #ddd !important; }
body.black-theme h1:hover a.wiki-anchor,
body.black-theme h2:hover a.wiki-anchor,
body.black-theme h3:hover a.wiki-anchor { color: #888; }


/* 
 * Additional CSS for all white themes
 */

